maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:23: error: not found: value estGaucheMur
	if(estGaucheMur())
           ^